# vhr-geo-fm

./: .gitignore  .pre-commit-config.yaml  README.md  dev.md  justfile  main.py  models.json  pyproject.toml
.github/workflows/: ci.yml
conf/: config.yaml  finetune.yaml  frozen.yaml  verify.yaml
data/: geo-bench2-results-vhr-base.csv  geo-bench2-results-vhr-extra.csv  vhr_datasets.csv
data/results/: geo-bench2-results-vhr-base-frozen.csv  geo-bench2-results-vhr-frozen-with-thor.csv  geo-bench2-results-vhr-frozen.csv
docs/literature/: Readme.md
eval/: datasets.py  models.py  run.py  scoring.py  subsample.py
notebooks/: explore.ipynb
results/timm_resnet50/finetune/100pct/: additional_info.json  hpo_params.json  results_and_parameters.csv
results/timm_resnet50/frozen/100pct/: hpo_params.json  results_and_parameters.csv
scripts/: Readme.md  patch_geo_bench.py
tests/: test_datasets.py  test_models.py  test_scoring.py  test_subsample.py
